--- a/package.json
+++ b/package.json
@@ -1,24 +1,29 @@
 {
-  "name": "@wowts/ace_serializer-3.0",
+    "name": "@wowts/ace_serializer-3.0",
   "version": "1.1.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "tsc"
-  },
-  "author": "Sidoine De Wispelaere",
-  "license": "MIT",
-  "dependencies": {
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "prepare": "tsc"
+    },
+    "author": "Sidoine De Wispelaere",
+    "license": "MIT",
+    "dependencies": {
     "@wowts/lua": "^1.3.0",
     "@wowts/tsaddon": "^1.1.2",
     "@wowts/tslib": "^1.1.0"
-  },
-  "devDependencies": {
-    "typescript": "^3.0.1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/wowts/ace_serializer-3.0.git"
-  }
+    },
+    "devDependencies": {
+        "typescript": "^4.1.2"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/wowts/ace_serializer-3.0.git"
+    },
+    "lua": {
+        "name": "AceSerializer-3.0",
+        "svn": "https://repos.wowace.com/wow/ace3/trunk/AceSerializer-3.0",
+        "entry": "AceSerializer-3.0.xml"
+    }
 }
